// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots it renders brand color correctly 1`] = `
<button
  class="btn btn-success"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders defaults correctly 1`] = `
<button
  class="btn btn-primary"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders large outline correctly 1`] = `
<button
  class="btn btn-success btn-outline btn-lg"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders link style correctly 1`] = `
<button
  class="btn btn-anchor"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots it renders outline correctly 1`] = `
<button
  class="btn btn-success btn-outline"
  type="button"
>
  Componentry
</button>
`;
